# TrafficWatch

./: README.md  build.sbt
dagster-orchestrator/: .env  Dockerfile  README.md  Readme.md  dagster.yaml  docker-compose.yml  workspace.yaml
dagster-orchestrator/dagster_code/: __init__.py
dagster_orchestrator/: .env  Dockerfile  Readme.md  dagster.yaml  docker-compose.yml  requirements.txt  workspace.yaml
dagster_orchestrator/dagster_code/: __init__.py  ingestion.py  script.py
dash-app/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dash-app/dash_app/: .env  main.py
database-service/: .env  README.md  docker-compose.yml
src/main/scala/: ConfigManager.scala  Connectors.scala  RenneApi.scala  RoadTraffic.scala  Transformation.scala
structured-streaming/: README.md  build.sbt
structured-streaming/src/main/resources/: application.conf
structured-streaming/src/main/scala/: ConfigManager.scala  Connectors.scala  RoadTraffic.scala
