[tool.poetry]
name = "dash-app"
version = "0.1.0"
description = ""
authors = ["amadou <adiattara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17"
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
pandas = "^2.2.2"
folium = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dash_server = "dash_app.main:dash_app"
